# chemloader

./: .pre-commit-config.yaml  dev.py  pyproject.toml  resources.txt
.github/workflows/: py_test.yml
chemloader/: dataloader.py
chemloader/datasets/chemical/: quantumemchanics.py
chemloader/datasets/pysical/: fp.py
chemloader/pipeline/: reader.py
moldata/: config.py  dataloader.py
moldata/datasets/chemical/: lipophilicity.py  pka.py  quantumemchanics.py
moldata/datasets/chemical/nmr/: phosphorus.py
moldata/datasets/chemical/solubility/: ESOL.py  FreeSolv.py
moldata/datasets/medical/: tox21.py
moldata/datasets/pysical/: logp.py  mp.py
moldata/storage/: base.py
tests/: test_ds.py
